Copying large output causes crash of all gnome-terminal instances
Steps to reproduce
- Clone and update
gnome-build-meta
and install bst as instructed - Install ipython3 on the host
- Build and start the latest development state with
bst shell core/gnome-terminal.bst
and then rungnome-terminal
in the started shell - Start
ipython3
and runfor i in range(0, 14209470): print(i)
10657101
allows to reproduce the issue,7104735
is too low) - Click on Edit -> Select all in the menu
Expected outcome
gnome-terminal
selects the text or displays a warning that it can't handle the large output for selection. The dialog should in the latter case recommend saving the content of the terminal into a file.
Actual outcome
All windows of gnome-terminal
crash after allocating around 1GB RAM.
Unlimited scrollback is configured. This is probably troublesome, but should cause the application to crash.
This can also be reproduced with 3.36.2 using VTE 0.60.3 +BIDI +GNUTLS +ICU +SYSTEMD
shipped with Ubuntu 20.04.
Edited by Karl-Philipp Richter