widget: Limit select-all to the writable region not including the scrollback

Including the scrollback in select-all makes it too easy to select so much
data that putting it on the clipboard either hangs the process for a long time
or causes a crash (gnome-terminal#288).

Fixes: https://gitlab.gnome.org/GNOME/gnome-terminal/-/issues/288
(cherry picked from commit caf8a6a7a17a3f70fa5fc611c71ffb27a5cfee75)